--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -3,7 +3,7 @@
 {% block title 'Find all the best pins on earth' %}
 
 {% block body %}
-	 <h1>All Pins</h1>
+	 <h1> {{ pluralize(pins|length,'Pin','Pins') }}</h1>
 
         <a href="{{path('app_pins_create')}}">Creer un Pin</a>
 
