Ajout de la page show et create, ajout de lien

--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title 'Find all the best pins on earth' %}
+{% block title 'Nouveau Pin' %}
 
 {% block body %}
 	<h1>Create Pin</h1>
