--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title 'Find all the best pins on earth' %}
+{% block title 'Trouver tous les meilleurs photos du monde' %}
 
 {% block body %}
 	 <h1> {{ pluralize(pins|length,'Pin','Pins') }}</h1>
