--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title 'Find all the best pins on earth' %}
+{% block title pin.title %}
 
 {% block body %}
 
