--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -3,10 +3,12 @@
 {% block title pin.title %}
 
 {% block body %}
-
-<h1> {{pin.title }} </h1>
+	<h1> {{pin.title }} </h1>
 	<p> {{ pin.description }} </p>
 	<a href="{{ path('app_pins_edit',{'id':pin.id}) }}">Edit</a>|
-	<a href="{{ path('app_home') }}">Back</a>
-
+	<a href="#" onclick="event.preventDefault(); confirm('Are you sure ?') && document.getElementById('js-pin-delete-form').submit();">Supprimer</a>
+	<form id="js-pin-delete-form" action="{{ path('app_pins_delete',{'id':pin.id}) }}" method="post" style="display: none;">
+		<input type="hidden" name="csrf_token" value="{{ csrf_token('pin_delete_'~pin.id) }}">
+		<input type="hidden" name="_method" value="DELETE">
+	</form>
 {% endblock %}
