--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -11,7 +11,9 @@
             {% for pin in pins %}
                 <article>
                     <h1><a href="{{ path('app_pins_show',{'id':pin.id}) }}">{{ pin.title }}</a></h1>
-                    <p> {{pin.description}} </p>
+                    <p> {{pin.description|u.truncate(20,'...',false)}} </p>
+                    <p>Submitted {{ pin.createdAt|ago }} </p>
+                    
                 </article>
                 
             {% endfor %}
