Ajout des messages flashs et deplacement du fichiers base dans layouts et aussi creation du fichier partials

--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layouts/base.html.twig' %}
 
 {% block title 'Trouver tous les meilleurs photos du monde' %}
 
