--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -6,7 +6,27 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+           <style>
+            .alert {
+                padding: 10px;
+                color: white;
+                text-align: center;
+                margin: 0;
+                border: 0;
+                border-radius: 0;
+            }
+
+            .alert-success{
+                background-color: green;
+            }
+            .alert-error{
+                background-color: red;
+            }  
+
+            .alert-info{
+                background-color: blue;
+            } 
+        </style>
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +34,8 @@
         {% endblock %}
     </head>
     <body>
+          {{ include('layouts/partials/_flash_messages.html.twig') }}
+        
         <nav>
             <ul>
                 <li><a href="{{ path('app_home') }}">Home</a></li>
