--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -7,7 +7,12 @@
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+           <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
            <style>
+            html,body{
+                font-family: 'Montserrat', sans-serif;
+            }
             .alert {
                 padding: 10px;
                 color: white;
