--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -9,30 +9,7 @@
            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
            <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,500&display=swap" rel="stylesheet">
-           <style>
-            html,body{
-                font-family: 'Montserrat', sans-serif;
-            }
-            .alert {
-                padding: 10px;
-                color: white;
-                text-align: center;
-                margin: 0;
-                border: 0;
-                border-radius: 0;
-            }
-
-            .alert-success{
-                background-color: green;
-            }
-            .alert-error{
-                background-color: red;
-            }  
-
-            .alert-info{
-                background-color: blue;
-            } 
-        </style>
+          <link rel="stylesheet" type="text/css" href="{{ asset('css/app.css') }}">
         {% endblock %}
 
         {% block javascripts %}
